@@ -25,3 +25,6 @@ Take extra/tzone from 2.15.3.
 Take extra/xdr from 3.1.1.
 
 Updates to src/gnuwin32 taken from 2.15.1 and 3.0.0.
+
+Added R_GetCurrentSrcref and R_GetSrcFilename from 2.15.1.
+
